<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kurban">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/button34"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/kurbanmesaj1"
        android:contentDescription="@string/kurbanmesaj1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button35"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/kurbanmesaj2"
        android:contentDescription="@string/kurbanmesaj2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button34"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button36"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/kurbanmesaj3"
        android:contentDescription="@string/kurbanmesaj3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button35"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button37"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/kurbanmesaj4"
        android:contentDescription="@string/kurbanmesaj4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button36"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button38"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/kurbanmesaj5"
        android:contentDescription="@string/kurbanmesaj5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button37"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button39"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/kurbanmesaj6"
        android:contentDescription="@string/kurbanmesaj6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button38"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>
