<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".regaip">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Regaip Kandili Mesajları"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/button52"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/regaipmesaj1"
        android:contentDescription="@string/regaipmesaj1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView8"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button53"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/regaipmesaj2"
        android:contentDescription="@string/regaipmesaj2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button52"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button54"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/regaipmesaj3"
        android:contentDescription="@string/regaipmesaj3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button53"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button55"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/regaipmesaj4"
        android:contentDescription="@string/regaipmesaj4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button54"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button56"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/regaipmesaj5"
        android:contentDescription="@string/regaipmesaj5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button55"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button57"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/regaipmesaj6"
        android:contentDescription="@string/regaipmesaj6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button56"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>
