<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".anneler">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Anneler Günü Mesajları"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/button12"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/annelermesaj1"
        android:contentDescription="@string/annelermesaj1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button13"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/annelermesaj2"
        android:contentDescription="@string/annelermesaj2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button12"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button14"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/annelermesaj3"
        android:contentDescription="@string/annelermesaj3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button13"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button15"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/annelermesaj4"
        android:contentDescription="@string/annelermesaj4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button14"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button16"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/annelermesaj5"
        android:contentDescription="@string/annelermesaj5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button15"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button17"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/annelermesaj6"
        android:contentDescription="@string/annelermesaj6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button16"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>
