<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mirac">

    <TextView
        android:id="@+id/textViewMirac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Miraç Kandili Mesajları"
        android:textStyle="bold"
        android:textColor="#fad28e"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/button46"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/miracmesaj1"
        android:contentDescription="@string/miracmesaj1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMirac"
        android:backgroundTint="#fad28e"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button47"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/miracmesaj2"
        android:contentDescription="@string/miracmesaj2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button46"
        android:backgroundTint="#fad28e"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button48"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/miracmesaj3"
        android:contentDescription="@string/miracmesaj3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button47"
        android:backgroundTint="#fad28e"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button49"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/miracmesaj4"
        android:contentDescription="@string/miracmesaj4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button48"
        android:backgroundTint="#fad28e"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button50"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/miracmesaj5"
        android:contentDescription="@string/miracmesaj5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button49"
        android:backgroundTint="#fad28e"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/button51"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/miracmesaj6"
        android:contentDescription="@string/miracmesaj6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button50"
        android:backgroundTint="#fad28e"
        android:textColor="#FFFFFF"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"/>

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:srcCompat="@drawable/miracgorsel1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button51"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:srcCompat="@drawable/miracgorsel2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView21"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:srcCompat="@drawable/miracgorsel3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView22"
        android:layout_marginTop="10dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
